# thesis-emulator

./: CMakeLists.txt  main.cpp  opcodes.h
src/: Mcu.cpp  Mcu.hpp  interrupts.hpp  main.cpp  opcodes.hpp  util.hpp
test/: Mcu.cpp  main.cpp
